0.7.0 - 0.7.1
-------------

	* added possibility to specify timeout until ReadersSupport gives up
	* RubyDebuggerProxy.checkConnection() fixed for ruby-debug
	* propagating RubyDebuggerException to the client (frontend)
	* fixed NPE during reading a number of added breakpoint
	* ability to synchronize $stderr and $stdout
	* ability to pass additional debugger options
	* ability to pass arguments to the debuggee
	* fixed ConcurrentModificationException in RubyDebuggerProxy
	* fixed breakpoint addition/removing
