@@ -5,7 +5,5 @@ public interface IRubyBreakpoint {
     boolean isEnabled();
     String getFilePath();
     int getLineNumber();
-    void setIndex(int index);
-    int getIndex();
     
 }
